templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <name>
  namespace: <name-of-the-space>
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "<dns-host>"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: <service-name>
                port:
                  number: <service-port>
  tls:
    - hosts:
        - "<host>"
      secretName: <secret-name>
